# AI-Control-Plane

./: .cursorrules  .env.client.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ACP_HANDOFF_FOR_NEW_CONVERSATION.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codecov.yml  pyproject.toml
.cursor/rules/: acp-l5-memory.mdc  core-critical.mdc  governance-docs.mdc  practice-evidence.mdc  src-python.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_question.md
.github/workflows/: ci.yml  publish-ghcr.yml
benchmarks/k6/: README.md  policy_evaluate.js
config/: agents.yml  otel-collector.yaml.example  policies.yml  projects.yml
customer-bundle/: HUONG_DAN_CAI_DAT.md
customer-bundle/integrations/: README.md  antigravity-acp.env.example
docs/: CLIENT_INTEGRATION.md  CONTRACT_TESTS.md  DATA_CLASSIFICATION.md  DEVELOPER_SCENARIOS.md  DEVELOPMENT_PROTOCOL.md  END_USER_VALUE.md  OPEN_SOURCE_READINESS.md  QUICKSTART.md  RUNBOOK.md
docs/governance/: ACP_ARTIFACT_PUZZLE_MAP.md  ACP_AUDIT_PROMPTS_1_3_FINAL.md  ACP_AUDIT_RECONCILE_FINAL_STATUS.md  ACP_CURSOR_PROMPT_PACKET_POST_MC.md  ACP_FULL_AUDIT_RECONCILIATION.md  ACP_HANDOFF_FOR_NEW_CONVERSATION_2026-06-27.md  ACP_KARPATHY_REARCHITECTURE_PLAN.md  (+76 more)
examples/: README.md
scripts/: acp-up.sh  anchor_bplus_issues.ps1  close_hygiene_issues.ps1  create_milestone_a_issues.sh  create_milestone_c_issues.ps1  create_milestone_c_plus_issues.ps1  create_new_gap_issues.sh  export_openapi.py  issue_43_comment.md  issue_comments_p0_new2.md  mc_issue_anchor_comments.ps1  restart_soak_loop.sh  run_ecc_deep_audit.sh  run_k6_policy_smoke.sh  run_otel_collector.sh  setup_github_milestones_and_protection.sh  smoke_acp.sh  soak_staging.sh  study08_vps_preflight.sh  sync_vps_acp_admin_freeze.sh  verify_ghcr_catalog.sh  verify_governance_memory.sh  verify_governance_status_runtime.sh  verify_openapi_runtime.sh  verify_p0_1.sh
tests/: __init__.py  conftest.py  test_apex_c_plus.py  test_apex_loop.py  test_api_contract_snapshot.py  test_api_server.py  test_api_server_errors.py  test_cli_apex.py  test_cli_approve.py  test_cli_assign.py  test_cli_gov.py  test_cli_http_errors.py  test_cli_logs.py  test_cli_main_entry.py  test_cli_quota.py  test_cli_status.py  test_exceptions.py  test_governance_memory.py  test_governance_status.py  test_guardrails.py  test_imports.py  test_jwks_identity.py  test_loader.py  test_mcp_forwarder_coverage.py  test_mcp_git_server.py  test_mcp_http_transport.py  test_mcp_policy_integration.py  test_mcp_server_factory.py  test_models.py  test_policies.py  test_policies_coverage.py  test_public_beta_gates.py  test_quota.py  test_redis_action_registry.py  test_redis_quota.py  test_registry.py  test_schemas.py  test_shipped_config_parity.py  test_smoke.py  test_task_persistence_api.py  (+3 more)
(+235 files in other folders)
